samples/_failures_safe/1761798464_98f951_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cebd3cf.c: In function ‘main’:
./samples/SAFE/__tmp_0cebd3cf.c:134:12: error: missing terminating " character
  134 |     printf("Log Analyzer -
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0cebd3cf.c:134:5: error: expected expression at end of input
  134 |     printf("Log Analyzer -
      |     ^~~~~~
./samples/SAFE/__tmp_0cebd3cf.c:134:5: error: expected declaration or statement at end of input
